// Copyright 2023 Google LLC

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//     https://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package telemetry;

option go_package = "google_guest_agent/telemetry";

message OSInfo {
  optional string os_type = 1;
  optional string long_name = 2;
  optional string short_name = 3;
  optional string version = 4;
  optional string kernel_version = 5;
  optional string kernel_release = 6;
}

message AgentInfo {
  optional string name = 1;
  optional string version = 2;
  optional string architecture = 3;
}
